--- a/app/MCSqrtEstimator.fsproj
+++ b/app/MCSqrtEstimator.fsproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="MathNet.Numerics.FSharp" Version="4.11.0" />
+    <PackageReference Include="XPlot.GoogleCharts" Version="3.0.1" />
   </ItemGroup>
 
 </Project>
