--- a/app/MCSqrtEstimator.fsproj
+++ b/app/MCSqrtEstimator.fsproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Compile Include="Estimators.fs" />
+    <Compile Include="Plot.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
