refactor to implement strategy on model exection

--- a/app/MCSqrtEstimator.fsproj
+++ b/app/MCSqrtEstimator.fsproj
@@ -5,9 +5,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="MonteCarlo/MathHelpers.fs" />
+    <Compile Include="MonteCarlo/Runner.fs" />
     <Compile Include="MonteCarlo/Simulation.fs" />
-    <Compile Include="MonteCarlo/McSqrt.fs" />
-    <Compile Include="Plot.fs" />
+    <Compile Include="MonteCarlo/Models/McSqrt.fs" />
+    <Compile Include="Presentation/Plot.fs" />
+    <Compile Include="Presentation/View.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
