Use DUs intead of exceptions to handle errors

--- a/app/MCSqrtEstimator.fsproj
+++ b/app/MCSqrtEstimator.fsproj
@@ -4,9 +4,13 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="MonteCarlo/MathHelpers.fs" />
-    <Compile Include="MonteCarlo/Runner.fs" />
-    <Compile Include="MonteCarlo/Models/McSqrt.fs" />
+    <Compile Include="Core/Utils/MathUtils.fs" />
+    <Compile Include="Core/MonteCarlo/Types/Estimate.fs" />
+    <Compile Include="Core/MonteCarlo/Models/McSqrt.fs" />
+    <Compile Include="Core/Simulation/Types/Input.fs" />
+    <Compile Include="Core/Simulation/Types/Output.fs" />
+    <Compile Include="Core/Simulation/Types/Result.fs" />
+    <Compile Include="Core/Simulation/Runner.fs" />
     <Compile Include="Presentation/Plot.fs" />
     <Compile Include="Presentation/View.fs" />
     <Compile Include="Program.fs" />
