--- a/app/MCSqrtEstimator.fsproj
+++ b/app/MCSqrtEstimator.fsproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <Compile Include="Core/Logging.fs" />
     <Compile Include="Core/MathUtils.fs" />
+    <Compile Include="Core/Types/MCModel.fs" />
     <Compile Include="Core/Types/Input.fs" />
     <Compile Include="Core/Types/Output.fs" />
     <Compile Include="Core/McSqrt.fs" />
